Added form for finding character

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
-@import './variables';
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
-@import './button';
+@import "./variables";
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
+@import "./button";
 
 * {
     font-family: "Roboto Condensed", sans-serif;
@@ -44,7 +44,7 @@ p {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
-    margin: 0; 
+    margin: 0;
 }
 
 .app {
@@ -66,17 +66,17 @@ main {
 }
 
 .pulse {
-    animation: pulse 1.5s ease-in-out .5s infinite
+    animation: pulse 1.5s ease-in-out 0.5s infinite;
 }
 
 @keyframes pulse {
     0% {
-        opacity: 1
+        opacity: 1;
     }
     50% {
-        opacity: .4
+        opacity: 0.4;
     }
     100% {
-        opacity: 1
+        opacity: 1;
     }
 }
